Fixed carousel image jumping

--- a/assets/css/app/resources-header.scss
+++ b/assets/css/app/resources-header.scss
@@ -74,6 +74,7 @@
   position: fixed;
   z-index: 99999;
   width: 100%;
+  top: 66px;
 }
 // CSS for content on top of carousel
 div#content-container {
